--- a/views/default/index.html
+++ b/views/default/index.html
@@ -5,12 +5,10 @@
 <script src="{{=URL('static', 'js/vue.js')}}"></script>
 
 <link rel="stylesheet" media="all" href="https://blackrockdigital.github.io/startbootstrap-grayscale/css/grayscale.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Courgette|Playfair+Display|Satisfy" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Patua+One|Playfair+Display|Satisfy" rel="stylesheet">
 
 <script>
-  // var sign_up_user_url = "{{=URL('api', 'sign_up_user')}}";
+  var send_msg_url = "{{=URL('api', 'send_msg')}}";
 </script>
 <script src="{{=URL('static', 'js/dropzone.js')}}"></script>
 {{end}}
@@ -19,52 +17,58 @@
   <div id="vue-div" class="display:none">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">
+
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a id="nav-home" class="nav-item nav-link active" href="#home" v-on:click="go_home()">Home</a>
-          <a id="nav-portfolio" class="nav-item nav-link active" href="#portfolio" v-on:click="go_home()">Portfolio</a>
-          <a id="nav-services" class="nav-item nav-link active" v-on:click="go_services()">Services</a>
-          <a id="nav-contact" class="nav-item nav-link active" href="#contact" v-on:click="go_services()">Contact</a>
+          <a id="nav-home" class="nav-item nav-link active" v-on:click="go_home()">
+            <i class="fa fa-home fa-lg"></i>Home</a></a>
+          <a id="nav-about" class="nav-item nav-link active" href="#about" v-on:click="go_home()">
+            <i class="fa fa-child fa-lg"></i>About Me</a></a>
+          <a id="nav-portfolio" class="nav-item nav-link active" href="#portfolio" v-on:click="go_home()">
+            <i class="fa fa-folder-open fa-lg"></i>Portfolio</a>
+          <a id="nav-services" class="nav-item nav-link active" v-on:click="go_services()">
+            <i class="fa fa-paint-brush fa-lg"></i>Services</a>
+          <a id="nav-contact" class="nav-item nav-link active" href="#contact" v-on:click="go_services()">
+            <i class="fa fa-comment fa-lg"></i>Contact</a>
         </div>
       </div>
     </nav>
 
-    <div class="home_and_portfolio">
-      <div class="container padded" v-if="home">
+      <div v-if="home" class="home_and_portfolio container padded">
         <section id="home">
-        <div class="home">
-          Color Consultant and Make Up Artist
-          <!-- <div class="container">
-            <img src="https://images.evisos.com.mx/2010/01/07/maquillista-profesional_cc17fc9f5_3.jpg" alt="" style="width:60%;">
+          <div class="home_header">
+              Color Consultant and Make Up Artist
+          </div>
+          <div class="container home_header">
+            <img src="https://img.clipartxtras.com/305146baa00e02c7c135227f52f798e8_scscipio05-pinterest-tumblr-outlines-and-eye-drawings-eyelashes-drawing-tumblr_536-750.jpeg" alt="" >
             <div class="bottom-left"></div>
-            <div class="top-left"><h2>Passionate</h2></div>
-            <div class="top-right"><h2>Creative</h2></div>
+            <div class="top-left"></div>
+            <div class="top-right"></div>
             <div class="bottom-right"></div>
             <div class="centered">Gina Avalos</div>
-          </div> -->
-          <br />
-          <div class="container black">
-            <div class="quarter">
-              <div class="padded">
+          </div>
+          <div id="about">
+            <br />
+          <div class="container social_box">
+              <div class="padded social_links home_header">
+                <h4 class="text-center">follow me on social media</h4>
                   <a href="" class="fa fa-snapchat fa-lg"></a>
                   <a href=" https://twitter.com/avalossg" class="fa fa-twitter fa-lg"></a>
                   <a href="https://www.instagram.com/avalossg" class="fa fa-instagram fa-lg"></a>
                   <a href=" https://www.youtube.com/channel/UCc3WF5kx31LHJcsMcAmYFvQ?view_as=subscriber" class="fa fa-youtube fa-lg"></a>
               </div>
-            </div>
-              <div class="threequarters white">
-                <div class="padded">
-                  hustle hard, believe in yourself, and stay humble
-                </div>
+
+              <div class="padded">
+                <h4>hustle hard, believe in yourself, and stay humble</h4>
               </div>
             </div>
 
-
-          <div class="">
+          <div class="about">
             <h3>Hi, I am Gina Avalos, and I am a Make Up Artist with 5 years of experience as a Sephora Color Consultant,
             and I am also CM and Lash Application Certified.
             I have also been doing this for more than 10 years and the service I provide is great.
@@ -75,30 +79,64 @@
       </section>
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio container content-section text-center">
-        <div class="row">
-            <h2>portfolio</h2>
-            this will be the list of images you want
-        </div>
+    <section class="portfolio container content-section">
+        <div class="" id="portfolio">
+            <h2 class="text-center">portfolio</h2>
+            <div class="portfolio_images">
+              <div class="container">
+                <div class="image_set2">
+                  <img src="../static/images/portfolio/p7.jpg" alt="">
+                  <img src="../static/images/portfolio/p5.jpg" alt="">
+                  <img src="../static/images/portfolio/p6.jpg" alt="">
+                  <img src="../static/images/portfolio/p11.jpg" alt="">
+
+                  <img src="../static/images/portfolio/p8.jpg" alt="">
+                  <img src="../static/images/portfolio/p9.jpg" alt="">
+                  <img src="../static/images/portfolio/p10.jpg" alt="">
+                  <img src="../static/images/portfolio/p3.jpg" alt="">
+
+
+                  <img src="../static/images/portfolio/p13.jpg" alt="">
+                  <img src="../static/images/portfolio/p12.jpg" alt="">
+                  <img src="../static/images/portfolio/p14.jpg" alt="">
+                  <img src="../static/images/portfolio/p16.jpg" alt="">
+
+                  <img src="../static/images/portfolio/p17.jpg" alt="">
+                  <img src="../static/images/portfolio/p18.jpg" alt="">
+                  <img src="../static/images/portfolio/p19.jpg" alt="">
+                  <img src="../static/images/portfolio/p2.jpg" alt="">
+                </div>
+                <div class="image_set1">
+                  <img src="../static/images/portfolio/p1.jpg" alt="">
+                  <img src="../static/images/portfolio/p15.jpg" alt="">
+                </div>
+              </div>
+            </div>
+            </div>
       </section>
     </div>
-  </div>
 
-  <div class="services_and_contact container" v-if="services">
+
+  <div class="services_and_contact text-center" v-if="services">
     <section id="services">
-        services page
-        <div class="container">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRn3ixKu_UMPnT_t6Qm06jm4RJLZCxARv1BoIB57qBZR0Ag1iCUqA" alt="" >
-          <div class="bottom-left">Lashes and Face: $55</div>
-          <div class="top-left">Lashes: $45</div>
-          <div class="top-right">Smile: $5</div>
-          <div class="bottom-right"></div>
-          <div class="centered"></div>
-      </div>
+      <h1>Free Lance Make Up Artist</h1>
+      <br />
+        <div class="">
+          <h3>Full Face: $45</h3>
+          <br />
+          <h3>Full Face and Lashes: $55</h3>
+        </div>
     </section>
 
-    <section id="contact" class="container content-section text-center">
-      this is contact page
+    <section>
+      <div id="contact" class="container content-section text-center">
+        <h1>message me</h1>
+        <input v-model="subject" class="form-control" type="text" placeholder="Subject">
+        <p class="form-text">Please include name in subject</p>
+        <input v-model="message" class="form-control" type="text" placeholder="Message">
+        <p class="form-text">Please include contact info and job description of job in message</p>
+        <button type="button" name="button" class="btn pink_button btn-lg" v-on:click="send_message()">send</button>
+      </div>
 
     </section>
 
