--- a/views/default/index.html
+++ b/views/default/index.html
@@ -16,7 +16,7 @@
 <div class="main_content">
   <div id="vue-div" class="display:none">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#">
 
       </a>
@@ -42,7 +42,7 @@
       <div v-if="home" class="home_and_portfolio container padded">
         <section id="home">
           <div class="home_header">
-              Color Consultant and Make Up Artist
+              Freelance MakeUp Artist
           </div>
           <div class="container home_header">
             <img src="https://img.clipartxtras.com/305146baa00e02c7c135227f52f798e8_scscipio05-pinterest-tumblr-outlines-and-eye-drawings-eyelashes-drawing-tumblr_536-750.jpeg" alt="" >
@@ -53,7 +53,16 @@
             <div class="centered">Gina Avalos</div>
           </div>
           <div id="about">
-            <br />
+            <img src="../Avalos/static/images/gina.jpg" class="self_image" alt="self_image">
+            <div class="about">
+            <h3>Hello my name is Gina Avalos and I am a Freelance Makeup Artist.
+              I am also a Color Consultant at Sephora where I CM Certified and Lash
+              Application Certified. I have been at Sephora for 4 years and have 8
+              years of Freelance experience. I am currently located in Sacramento, Ca.
+               I specialize Weddings, Prom, Quinceaneras and any special events.
+               If you are interested in booking with me, send me a message!
+            </h3>
+          </div>
           <div class="container social_box">
               <div class="padded social_links home_header">
                 <h4 class="text-center">follow me on social media</h4>
@@ -62,19 +71,7 @@
                   <a href="https://www.instagram.com/avalossg" class="fa fa-instagram fa-lg"></a>
                   <a href=" https://www.youtube.com/channel/UCc3WF5kx31LHJcsMcAmYFvQ?view_as=subscriber" class="fa fa-youtube fa-lg"></a>
               </div>
-
-              <div class="padded">
-                <h4>hustle hard, believe in yourself, and stay humble</h4>
-              </div>
             </div>
-
-          <div class="about">
-            <h3>Hi, I am Gina Avalos, and I am a Make Up Artist with 5 years of experience as a Sephora Color Consultant,
-            and I am also CM and Lash Application Certified.
-            I have also been doing this for more than 10 years and the service I provide is great.
-            I specialize in Promp, and Weedings, also Quinceneras and soccer events #NoEraPenal.
-            </h3>
-          </div>
         </div>
       </section>
 
@@ -85,30 +82,30 @@
             <div class="portfolio_images">
               <div class="container">
                 <div class="image_set2">
-                  <img src="../static/images/portfolio/p7.jpg" alt="">
-                  <img src="../static/images/portfolio/p5.jpg" alt="">
-                  <img src="../static/images/portfolio/p6.jpg" alt="">
-                  <img src="../static/images/portfolio/p11.jpg" alt="">
+                  <img src="../Avalos/static/images/portfolio/p7.JPG" alt="">
+                  <img src="../Avalos/static/images/portfolio/p5.JPG" alt="">
+                  <img src="../Avalos/static/images/portfolio/p6.JPG" alt="">
+                  <img src="../Avalos/static/images/portfolio/p11.JPG" alt="">
 
-                  <img src="../static/images/portfolio/p8.jpg" alt="">
-                  <img src="../static/images/portfolio/p9.jpg" alt="">
-                  <img src="../static/images/portfolio/p10.jpg" alt="">
-                  <img src="../static/images/portfolio/p3.jpg" alt="">
+                  <img src="../Avalos/static/images/portfolio/p8.JPG" alt="">
+                  <img src="../Avalos/static/images/portfolio/p9.JPG" alt="">
+                  <img src="../Avalos/static/images/portfolio/p10.JPG" alt="">
+                  <img src="../Avalos/static/images/portfolio/p3.JPG" alt="">
 
 
-                  <img src="../static/images/portfolio/p13.jpg" alt="">
-                  <img src="../static/images/portfolio/p12.jpg" alt="">
-                  <img src="../static/images/portfolio/p14.jpg" alt="">
-                  <img src="../static/images/portfolio/p16.jpg" alt="">
+                  <img src="../Avalos/static/images/portfolio/p13.JPG" alt="">
+                  <img src="../Avalos/static/images/portfolio/p12.JPG" alt="">
+                  <img src="../Avalos/static/images/portfolio/p14.JPG" alt="">
+                  <img src="../Avalos/static/images/portfolio/p16.jpg" alt="">
 
-                  <img src="../static/images/portfolio/p17.jpg" alt="">
-                  <img src="../static/images/portfolio/p18.jpg" alt="">
-                  <img src="../static/images/portfolio/p19.jpg" alt="">
-                  <img src="../static/images/portfolio/p2.jpg" alt="">
+                  <img src="../Avalos/static/images/portfolio/p17.jpg" alt="">
+                  <img src="../Avalos/static/images/portfolio/p18.jpg" alt="">
+                  <img src="../Avalos/static/images/portfolio/p19.jpg" alt="">
+                  <img src="../Avalos/static/images/portfolio/p2.JPG" alt="">
                 </div>
                 <div class="image_set1">
-                  <img src="../static/images/portfolio/p1.jpg" alt="">
-                  <img src="../static/images/portfolio/p15.jpg" alt="">
+                  <img src="../Avalos/static/images/portfolio/p1.jpg" alt="">
+                  <img src="../Avalos/static/images/portfolio/p15.JPG" alt="">
                 </div>
               </div>
             </div>
