--- a/views/layout.html
+++ b/views/layout.html
@@ -11,7 +11,7 @@
     <link href="{{=URL('static','css/myapp.css')}}" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="{{=URL('static', 'font-awesome-4.6.3/css/font-awesome.min.css')}}">
     <title>Avalos</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../static/images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../Avalos/static/images/favicon.ico" />
     {{include "web2py_ajax.html"}}
   </head>
   <body class="black">
@@ -29,7 +29,7 @@
 
             <ul class="menu right">
               <li>
-            
+
               </li>
             </ul>
           </div>
